# machine-learning-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
check_torch/: CMakeLists.txt  example.cpp
development/: .gitignore  install_env.sh  install_lib.sh  install_lib_custom.sh
homlcpp/: CMakeLists.txt  README.md
homlcpp/chapter001/: CMakeLists.txt
homlcpp/chapter001/arrayfire/: CMakeLists.txt  linalg_af.cpp  linreg_af.cpp
homlcpp/chapter001/blaze/: CMakeLists.txt  linalg_blaze.cpp  linreg_blaze.cpp
homlcpp/chapter001/dlib/: CMakeLists.txt  linalg_dlib.cpp  linreg_dlib.cpp
homlcpp/chapter001/eigen/: CMakeLists.txt  linalg_eigen.cc  linreg_eigen.cpp
homlcpp/chapter001/xtensor/: CMakeLists.txt  linalg_xtensor.cc
homlcpp/chapter002/: CMakeLists.txt
homlcpp/chapter002/csv/: CMakeLists.txt
homlcpp/chapter002/csv/dlib/: CMakeLists.txt  csv_dlib.cpp
homlcpp/chapter002/csv/eigen/: CMakeLists.txt  csv.cpp
homlcpp/chapter002/csv/flashlight/: CMakeLists.txt  csv_flashlight.cpp
homlcpp/chapter002/csv/mlpack/: CMakeLists.txt  csv_mlpack.cpp
homlcpp/chapter002/hdf5/: CMakeLists.txt  hdf5.cpp
homlcpp/chapter002/img/: CMakeLists.txt
homlcpp/chapter002/img/dlib/: CMakeLists.txt  img_dlib.cpp
homlcpp/chapter002/img/opencv/: CMakeLists.txt  ocv.cpp
homlcpp/chapter002/json/: CMakeLists.txt  json.cc  review.h
